--- a/CPP_Module_00/ex01/Makefile
+++ b/CPP_Module_00/ex01/Makefile
@@ -3,7 +3,7 @@ NAME = phone
 CC = c++
 CFLAGS = -Wall -Wextra -Werror -g3 -std=c++98
 
-SRCS = main.cpp
+SRCS = main.cpp PhoneBook.cpp Contact.cpp
 OBJS = $(SRCS:.cpp=.o)
 
 all: $(NAME)
