--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,55 +1,64 @@
 {
-    "files.associations": {
-        "ostream": "c",
-        "iostream": "c",
-        "array": "c",
-        "atomic": "c",
-        "bit": "c",
-        "*.tcc": "c",
-        "cctype": "c",
-        "charconv": "c",
-        "clocale": "c",
-        "cmath": "c",
-        "compare": "c",
-        "concepts": "c",
-        "cstdarg": "c",
-        "cstddef": "c",
-        "cstdint": "c",
-        "cstdio": "c",
-        "cstdlib": "c",
-        "ctime": "c",
-        "cwchar": "c",
-        "cwctype": "c",
-        "deque": "c",
-        "string": "c",
-        "unordered_map": "c",
-        "vector": "c",
-        "exception": "c",
-        "algorithm": "c",
-        "functional": "c",
-        "iterator": "c",
-        "memory": "c",
-        "memory_resource": "c",
-        "numeric": "c",
-        "optional": "c",
-        "random": "c",
-        "string_view": "c",
-        "system_error": "c",
-        "tuple": "c",
-        "type_traits": "c",
-        "utility": "c",
-        "format": "c",
-        "initializer_list": "c",
-        "iosfwd": "c",
-        "istream": "c",
-        "limits": "c",
-        "new": "c",
-        "numbers": "c",
-        "span": "c",
-        "stdexcept": "c",
-        "streambuf": "c",
-        "typeinfo": "c",
-        "variant": "c",
-        "text_encoding": "c"
-    }
+	"files.associations": {
+		"ostream": "cpp",
+		"cctype": "cpp",
+		"clocale": "cpp",
+		"cmath": "cpp",
+		"cstdarg": "cpp",
+		"cstddef": "cpp",
+		"cstdio": "cpp",
+		"cstdlib": "cpp",
+		"cstring": "cpp",
+		"ctime": "cpp",
+		"cwchar": "cpp",
+		"cwctype": "cpp",
+		"array": "cpp",
+		"atomic": "cpp",
+		"bit": "cpp",
+		"*.tcc": "cpp",
+		"bitset": "cpp",
+		"chrono": "cpp",
+		"compare": "cpp",
+		"concepts": "cpp",
+		"condition_variable": "cpp",
+		"cstdint": "cpp",
+		"deque": "cpp",
+		"unordered_map": "cpp",
+		"vector": "cpp",
+		"exception": "cpp",
+		"algorithm": "cpp",
+		"functional": "cpp",
+		"iterator": "cpp",
+		"memory": "cpp",
+		"memory_resource": "cpp",
+		"numeric": "cpp",
+		"optional": "cpp",
+		"random": "cpp",
+		"ratio": "cpp",
+		"string": "cpp",
+		"string_view": "cpp",
+		"system_error": "cpp",
+		"tuple": "cpp",
+		"type_traits": "cpp",
+		"utility": "cpp",
+		"initializer_list": "cpp",
+		"iomanip": "cpp",
+		"iosfwd": "cpp",
+		"iostream": "cpp",
+		"istream": "cpp",
+		"limits": "cpp",
+		"mutex": "cpp",
+		"new": "cpp",
+		"numbers": "cpp",
+		"ranges": "cpp",
+		"span": "cpp",
+		"sstream": "cpp",
+		"stdexcept": "cpp",
+		"stop_token": "cpp",
+		"streambuf": "cpp",
+		"thread": "cpp",
+		"typeinfo": "cpp",
+		"semaphore": "cpp",
+		"__nullptr": "cpp"
+	}
 }
