cpp02 fini pour 80%

--- a/CPP_Module_02/ex00/Makefile
+++ b/CPP_Module_02/ex00/Makefile
@@ -2,7 +2,7 @@ NAME = My_first_cannon
 CC = c++
 CFLAGS = -Wall -Wextra -Werror -g3 -std=c++98
 
-SRCS = 
+SRCS = main.cpp Fixed.cpp
 OBJS = $(SRCS:.cpp=.o)
 
 all: $(NAME)
