--- a/CPP_Module_02/ex01/Makefile
+++ b/CPP_Module_02/ex01/Makefile
@@ -1,8 +1,8 @@
-NAME = 
+NAME = First_steps
 CC = c++
 CFLAGS = -Wall -Wextra -Werror -g3 -std=c++98
 
-SRCS = 
+SRCS = main.cpp Fixed.cpp
 OBJS = $(SRCS:.cpp=.o)
 
 all: $(NAME)
